--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
-      <div>
+      <div >
         <img src="./assets/images/profile.png" />
 
         <p>My Name is Christian Rangel</p>
@@ -35,7 +35,14 @@
     </header>
     </br>
 </br> </br> </br> </br> </br> </br> </br> </br>
-<h2>Portfolio</h2>
+</br> </br> </br> </br> </br> 
+<div class="portfolio">
+
+<img src="./assets/images/horiseon.png" class="center"style="width:30em; height:15em"></br>
+<img src="./assets/images/runbuddy.png" class="center"style="width:30em; height:15em">
+<img src="./assets/images/covidByCountry.png" class="center"style="width:30em; height:15em">
+
+</div>
     
   </body>
 </html>
