added new portfolio image

--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
           style="width:30em; height:15em"></a>
       <a href="https://crangel93.github.io/Covid-By-Country/"><img src="./assets/images/covidByCountry.png"
           class="center" style="width:30em; height:15em"></a>
+          ><img src="./assets/images/Untitled.png"
+          class="center" style="width:30em; height:15em">
 
     </div>
   </center>
